fixed z-indexing

--- a/styles/ImageBox.module.css
+++ b/styles/ImageBox.module.css
@@ -21,6 +21,11 @@
     padding: 4px 8px;
     width: 250px;
   }
+
+  .nav p {
+    font-size: 14px;
+    width: 100%;
+  }
   
   /*------------Image Grid settings-------------*/
   .images-container {
@@ -76,7 +81,7 @@
     width: 100%;
     background-color: rgba(37, 39, 43, 0.6);
     display: flex;
-    z-index: 1;
+    z-index: 3;
     justify-content: center;
   }
   
@@ -90,7 +95,7 @@
     height: 400px;
     overflow: hidden;
     position: relative;
-    z-index: 4;
+    z-index: 5;
     padding: 20px;
   }
   
@@ -101,12 +106,13 @@
     height: 24px;
     width: 24px;
     position: relative;
+    text-align: center;
   }
   
   .exit {
     float: right;
-    font-size: 15px;
-    padding-top: 3px;
+    font-size: 14px;
+    padding-top: 0;
     font-weight: 500;
   }
   
